@@ -4,11 +4,14 @@ import lombok.AllArgsConstructor;
 import lombok.Builder;
 import lombok.Data;
 import lombok.NoArgsConstructor;
+import org.microsoft.qintelipass.enums.UserRole;
 import org.springframework.security.core.GrantedAuthority;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 
 import java.util.Collection;
 import java.util.Collections;
+import java.util.List;
 
 @Data
 @Builder
@@ -18,9 +21,12 @@ public class AuthenticatedUser implements UserDetails {
     private Long userId;
     private String username;
     private String password;
+    private UserRole role;
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        return Collections.emptyList();
+        return role != null
+                ? List.of(new SimpleGrantedAuthority("ROLE_" + role.name()))
+                : Collections.emptyList();
     }
     @Override
     public String getPassword() {
